# wx-ilink-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.hostnet.yml  docker-compose.yml  xhs-settings.json
scripts/: docker-network-check.sh
src/: config.rs  http_server.rs  main.rs
src/core/: api.rs  auth.rs  bot.rs  mod.rs  nickname_store.rs  parser.rs  router.rs  session.rs  todo_store.rs  xhs_client.rs
src/modules/: base.rs  echo_module.rs  help_module.rs  mod.rs  nickname_module.rs  notify_module.rs  query_module.rs  todo_module.rs  xhs_module.rs
src/utils/: crypto.rs  logger.rs
static/: index.html
