[package]
name = "wx-ilink-bot"
version = "0.1.0"
edition = "2021"
description = "微信 iLink Bot 消息处理服务"
authors = ["tadow"]

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

# AES 加解密
aes = "0.8"
ecb = "0.1"
block-padding = "0.3"

# Base64
base64 = "0.22"

# 随机数
rand = "0.8"

# 正则表达式
regex = "1"

# 异步 trait
async-trait = "0.1"

# 环境变量
dotenvy = "0.15"

# 时间处理
chrono = "0.4"

# 错误处理
anyhow = "1"
thiserror = "2"

# HTTP 服务（管理接口）
axum = { version = "0.8", features = ["multipart"] }
